# Metallagmenos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  shaderTypes.h  standalone.sh  xcode.sh
data/scenes/: bunnies.json  bunnyCube.json  cornelBox.json  cubeScene.json  cubesScene.json  sponza.json  sponzaHornbug.json
data/scenes/sponza/: sponza.mtl
data/shaders/: box_blur.metal  common.hpp  config.hpp  cube.metal  depth_prepass.metal  directionalLighting.metal  directions_encoding.metal  draw_debug.metal  final_gather.metal  gbuffer.metal  light.metal  min_max_depth.metal  model.metal  ray_trace.metal  shaderCommon.hpp  shaderTypes.hpp  shadow.metal  triangle.metal  twopass_ blur.metal
src/: main.mm
src/Core/: engine.hpp  engine.mm  pch.hpp  texture.hpp  vertexData.hpp
src/Core/Components/: camera.cpp  camera.hpp  gltfLoader.cpp  gltfLoader.hpp  mesh.cpp  mesh.hpp  sceneParser.cpp  textureArray.cpp  textureArray.hpp
src/Core/managers/: rayTracingManager.hpp  rayTracingManager.mm  renderPassManager.hpp  renderPassManager.mm  renderPipeline.hpp  renderPipeline.mm  resourceManager.hpp  resourceManager.mm
src/Math/: AAPLMathUtilities.cpp
src/core/: engine.hpp  engine.mm  pch.hpp  texture.cpp
src/core/components/: camera.cpp  camera.hpp  sceneParser.cpp  sceneParser.hpp  textureArray.hpp
src/core/managers/: rayTracingManager.hpp  rayTracingManager.mm  renderPassManager.hpp  renderPassManager.mm  renderPipeline.hpp  renderPipeline.mm  resourceManager.hpp  resourceManager.mm  resourceNames.hpp
src/debug/: debug.cpp  debug.hpp
src/editor/: editor.cpp  editor.hpp  imguiManager.cpp  imguiManager.hpp
src/editor/profiler/: profiler.cpp  profiler.hpp
